# harness-manager

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json
.github/workflows/: ci.yml  npm-publish.yml  release.yml
docs/: harness-manifest.md
harnesses/builtin/: gstack-claude.toml  gstack.toml  lazycodex.toml  omc.toml  omo.toml  omx.toml  ouroboros.toml  superpowers-claude.toml  superpowers.toml
npm/: postinstall.js  smoke-install.js
runtimes/builtin/: claude.toml  codex.toml  gajae-code.toml  grok.toml  opencode.toml  pi.toml
scripts/: install.sh  phase1-qa.sh  phase2-qa.sh  qa-plugin-harness.sh
src/: main.rs
src/auth/: login.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/detect/: mod.rs
src/harnesses/: builtin.rs  builtin_tests.rs  detect.rs  detect_tests.rs  install.rs  install_tests.rs  manifest.rs  manifest_tests.rs  mod.rs  package.rs  registry.rs  registry_tests.rs  source.rs  source_tests.rs  spec.rs  state.rs  types.rs
src/harnesses/builtin/: omc.toml  ouroboros.toml
src/harnesses/defs/: common.rs  mod.rs
src/init/: mod.rs
src/inject/: mod.rs
src/isolation/: db_links.rs  env.rs  mod.rs  paths.rs  shared_state.rs  spec.rs  tests.rs
src/launch/: assembly.rs  assembly_tests.rs  injection.rs  mod.rs  profile.rs  runner.rs  target.rs  tests.rs
src/runtimes/: auth.rs  builtin.rs  manifest.rs  manifest_tests.rs  mod.rs  registry.rs  registry_tests.rs  types.rs
src/secrets/: mod.rs
tests/: harness_source_cli.rs  init_cli.rs  launch_ordering.rs
tests/harness_source_cli/: package.rs  source_repo.rs  support.rs
(+99 files in other folders)
